Fixed speed of positions loading Added search between categories